--- a/style.css
+++ b/style.css
@@ -1,162 +1,88 @@
-* {
+/* *  {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style-type: none;
-}
+}*/
 
 :root {
-    --yellow-color: #F6C332;
-    --blue-color: #252157;
-    --red-color: #B01F25;
-    --Magenta-color: #DC2A78;
-    --white-color: #F7F7F8;
+    --yellow-color: #DD960A;
+    --blue-color: #242057;
+    --white-color: #F6F6F8;
+    --black-color: #141414;
 }
 
 body {
     max-width: 100%;
-    width: 100%;
-    height: auto;
-    font-family: open-sans, sans-serif;
+    width:90%;
+    position: relative;
+    font-family: open sans, sans-serif;
+        list-style: none;
 }
 
 header {
-    position: relative;
-    display: block;
-    padding: 40px 20px 0px 20px;
+    max-width: 100%;
     width: 100%;
-    height: 100vh;;
-    background-color: var(--yellow-color);
-
-}
-
-header ul {
-    position: relative;
-}
-
-header ul li {
-    position: relative;
-}
-
-header #home-nav li a {
-    display: flex;
-    margin: 10px 30px 10px 30px;
-    font-size: 13px;
-    color: var(--blue-color);
-    text-decoration: none;
-}
-
-header ul li a[href="#header"]:after {
-    content: "";
-    position: absolute;
-    left: 7em;
-    displaY: inline-block;
-    align-self: center;
-    height: 30px;
-    width: 1px;
-    background-color: var(--blue-color);
-}
-
-header ul li a[href="#portfolio"]:before {
-    content: "";
-    position: absolute;
-    right: 9.5em;
-    displaY: inline-block;
-    align-self: center;
-    height: 30px;
-    width: 1px;
-    background-color: var(--blue-color);
-}
-
-header ul li a img {
-    position: relative;
-    right: -5em;
-    width: 80%;
     height: auto;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 20px 0px 20px;
-}
-
-.navbar {
+nav {
+    padding:20px 20px;
+    display:block;
+    width: 100%;
+    position:fixed;
+    top:0;
+    left:0;
     background-color: var(--white-color);
-    height: 60px;
-    border-radius: 30px;
+    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
 }
 
-#home-nav {
-    width: 70vw;
-    margin: 0px auto;
+nav #home-nav a{
+    color:var(--blue-color);
+    transition: .3s ease-in;
+}
+
+nav #home-nav a:hover {
+    text-decoration: underline;
+}
+
+nav a img {
+    position:absolute;
+    top:0;
+    left:45%;
+    right:50%;
+    width:7%;
+    height: auto;
+    transition: .3s ease-in;
+    background-color: #F6F6F8;
+    border-radius: 50%;
+}
+
+nav a img:hover {
+transform: rotate(-45deg);
+}
+
+nav #icon-bar li a {
+    color:var(--white-color);
+    display:block;
+    width:30px;
+    height:30px;
+    margin:0px 10px;
+    border-radius: 15px;
+    background-color:var(--blue-color);
+}
+
+nav #icon-bar li a:hover {
+    transform:scale(1.1);
 }
 
 #hero {
-    position:absolute;
-    
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--yellow-color);
 }
 
-#secuence {
-    display: block;
-    height: 200px;
-    width: 3px;
-    background-color: white;
-}
-
-header #hero ul img[alt="Maria Briceño Photo"] {
-    width: 100%;
-    height: auto;
-    align-self: flex-end;
-    margin:0px 30px 0px 80px;
-}
-
-header #hero p {
-    display: block;
-    margin:0px 0px 0px 100px;
-    font-size:19px;
-    width: 60%;
-    color: var(--blue-color);
-}
-
-header #hero ul li a[href="#contact"] {
-    position:relative;
-    display:block;
-    margin:10px 0px 10px 100px;
-    width:150px;
-    text-align:center;
-    padding:10px 20px 10px 20px;
-    border:2px solid var(--blue-color);
-    transition: .2s ease-in;
-    text-decoration:none;
-}
-
-header #hero ul li a[href="#contact"]:hover {
-    background-color: var(--blue-color);
-    color:var(--white-color)
-}
-
-header #hero #hero-main-links {
-    font-size:11px;
-}
-
-header #hero #hero-main-links a{
-    display:inline-block;
-    margin:0px;
-    padding:0px;
-    font-size:11px;
-}
-
-section #portfolio {
-    display: block;
-    background-color: var(--white-color);
-    height: auto;
-    width: 100%;
-}
-
-.row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+#hero ul {
+    list-style-type: none;
+    list-style: none;
 }
