--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     --black-color: #141414;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     max-width: 100%;
     width:100vw;
@@ -35,14 +39,14 @@ nav {
     z-index: 1000;
 }
 
-nav #home-nav a[href="#header"],
+nav #home-nav a[href="#portfolio"],
 nav #home-nav a[href="#contact"]
  {
     color:var(--blue-color);
     transition: .3s ease-in;
 }
 
-nav #home-nav a[href="#header"]:hover,
+nav #home-nav a[href="#portfolio"]:hover,
 nav #home-nav a[href="#contact"]:hover
  {
     text-decoration: underline;
@@ -123,24 +127,24 @@ nav #icon-bar li a i {
     border-radius: 4px;
 } 
 
-#hero #home img[src="img/MARIA-BRICENO-PORTRAIT.png"] {
+#hero #home img[src="img/MARIA-BRICENO-PORTRAIT-20.png"] {
     width:80%;
     height: auto;
     padding-right:80px;
-    margin-left:200px;
+    margin-left:175px;
     margin-bottom:-16px;
 }
 
 #hero #home #hero-text {
     display:block;
-    width:34%;
+    width:30%;
     height:auto;
-    margin:500px 300px 0px auto;
+    margin:500px 280px 0px auto;
     color:var(--blue-color);
 }
 
 #hero #home #hero-text p {
-    font-size:19px;
+    font-size:22px;
 }
 
 #hero #home #hero-text a[href="#contact"] {
@@ -204,7 +208,7 @@ nav #icon-bar li a i {
 #portfolio {
     position:relative;
     width:100%;
-    height: auto;
+    height: 100vh;
     padding:60px 75px;
 }
 
@@ -224,20 +228,25 @@ nav #icon-bar li a i {
     color:var(--blue-color);
     font-size:60px;
     font-weight: 800;
-    
 }
 
 #portfolio #portfolio-content #portfolio-galery-1 {
     margin:20px 0px;
 }
 
+#portfolio-items {
+    padding: 0;
+    display:flex;
+    padding:0px 150px;
+}
+
 .portfolio-item {
     position:relative;
     display:block;
-    margin:20px 0px;
-    height:auto;
-    color:var(--blue-color);
-    background-color:var(--white-color);
+    margin:20px 20px;
+    width:320px;
+    height:350px;
+    background-color:var(--black-color);
     box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.2);
     padding:20px;
     border-radius:8px;
@@ -252,71 +261,149 @@ nav #icon-bar li a i {
     transform:scale(0.99);
 }
 
-.grid {
-    display:grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, auto) ;
-    grid-row-gap:10px;
-    grid-column-gap:30px;
+.portfolio-item .port-text {
+    position:relative;
+    font-size:30px;
+    font-weight: 800;
+    z-index:902;
+    color:var(--white-color);
+    text-align: center;
 }
 
-#gd-item {
-    display:block;
-    width:100%;
+.portfolio-item .port-text a {
+    color:var(--white-color);
+}
+
+.portfolio-item img {
+    width: 100%;
+    position:absolute;
+    top:0;
+    left:0;
     height: 100%;
-    grid-column: 2/6;
-    grid-row:1/3;
-    padding:0;
+    object-fit: none;
+    border-radius:8px;
+    z-index:900;
+    opacity:0.2;
+    transition: .3s ease;
 }
 
-#mg-item {
-    display:block;
-    width:100%;
-    height: 300px;
-    height: auto;
-    grid-column: 6/12;
-    grid-row:1/3;
-    padding:0;
-}
-#fe-item {
-    display:block;
-    height: 300px;
-    width:100%;
-    height: auto;
-    grid-column:2/12;
-    grid-row:3/7;
-    padding:0;
+.portfolio-item .port-text:hover {
+    text-decoration:underline;
+    
 }
 
-#graphic-port img {
-    position:relative;
-    margin:0;
-    padding:0;
-    width:100%;
-    height:1000px;
-    object-fit: none;
+.portfolio-item img:hover {
+    opacity:0.3;
 }
-#motion-port img {
-    position:relative;
-    margin:0;
-    padding:0;
+
+/* END OF PORTFOLIO     ///////////////////////////////   */
+
+/* CONTACT     ///////////////////////////////////////////////////////////////////////////////////////////   */
+
+#contact {
+    max-width: 100%;
     width:100%;
-    height:100%;
-    object-fit: none;
+    height: 100vh;    
+    background-color: var(--yellow-color);
 }
-#ux-port img {
-    position:relative;
-    margin:0;
-    padding:0;
+
+#contact ul {
+    list-style-type: none;
+}
+
+#contact #form-contact {
+    display:flex;
+    width: 100%;
+    height:100vh;
+    list-style-type: none; 
+    padding:0px 75px 0px 75px;
+    
+}
+
+#contact #form-contact #form-inside {
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+    height:auto;
+}
+
+#contact #form-contact #form-inside h3 {
+    font-size:50px;
+    color:var(--blue-color);
+    font-weight: 800;
+}
+
+#contact #form-contact #form-inside p {
+    margin:30px 0px;
+    font-size:22px;
+    color: var(--blue-color);
+}
+
+#contact #form-contact #form-inside #contact-text-email {
+    display:block;
+    padding:20px;
+    border:3px solid var(--white-color);
+    border-radius: 8px;
+    font-size:50px;
+    font-weight: 800;
+    color: var(--white-color);
+    text-align: center;
+}
+
+#contact #form-contact #form-inside form {
+    display:block;
     width:100%;
-    height:100%;
-    object-fit: none;
 }
-#frontend-port img {
-    position:relative;
-    margin:0;
-    padding:0;
+
+#contact #form-contact #form-inside form input {
+    displaY:block;
     width:100%;
-    height:100%;
-    object-fit: none;
+    padding:10px 10px;
+    border:none;
+    border-radius:8px;
 }
+
+#contact #form-contact #form-inside form textarea {
+    display:block;
+    width:100%;
+    padding:10px 10px;
+    border:none;
+    border-radius:8px;
+    resize:none;
+}
+
+#contact #form-contact #form-inside form button {
+    display:block;
+    width: 200px;
+    height:70px;
+    background-color:var(--white-color);
+    border:none;
+    border-radius:8px;
+    color:var(--blue-color);
+    font-weight: 800;
+    text-align: center;
+    font-size:19px;
+    transition:.3s ease;
+}
+
+#contact #form-contact #form-inside form button:hover {
+    background-color:var(--blue-color);
+    color:var(--white-color);
+}
+
+#contact #img-contact {
+    display:block;
+    width: 100%;
+    height: 100vh;
+    margin:0;
+}
+
+#contact #img-contact img[src="img/IMG_1074-d-21.jpg"] {
+    display:block;
+    border-radius: 8px;
+    width:100%;
+    height:100vh;
+    object-fit: cover;
+    object-position: center center;
+}
+
