--- a/style.css
+++ b/style.css
@@ -407,3 +407,127 @@ nav #icon-bar li a i {
     object-position: center center;
 }
 
+/* END OF CONTACT     ///////////////////////////////   */
+
+/* FOOTER     ///////////////////////////////////////////////////////////////////////////////////////////   */
+
+footer {
+    max-width: 100%;
+    width:100%;
+    height: auto;
+    background-color: var(--white-color);
+}
+
+footer ul {
+    list-style-type: none;
+    padding:0;
+    margin:0;
+}
+
+.copyright {
+    position:relative;
+    bottom: 0;
+    display:block;
+    width: 100%;
+    background-color: var(--blue-color);
+    text-align: center;
+}
+
+.copyright p {
+    display:block;
+    color:var(--white-color);
+    text-align: center;
+    margin:0;
+    padding:20px 0px;
+    font-size:12px;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
+
+.text-icons {
+    display:block;
+    padding:75px 75px 20px 75px;
+    width:90vw;
+    text-align: center;
+    border-bottom: solid 3px var(--yellow-color);
+}
+
+#text-icons-inside {
+    padding:0px auto;
+    text-align: center;
+}
+
+#text-icons-inside li a {
+    position: relative;
+    font-size:17px;
+    display:block;
+    width:44px;
+    height:44px;
+    margin:60px 20px 50px 20px;
+    background-color:var(--blue-color);
+    border-radius: 22px;
+    color:white;
+    transition: .3s ease;
+}
+
+#text-icons-inside li a:hover {
+    transform: scale(1.1);
+}
+
+#text-icons-inside li a:active {
+    transform: scale(0.9);
+}
+
+#text-icons-inside li a i {
+    color: var(--white-color);
+    margin:0;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+
+}
+
+.enlaces-de-interes {
+    width:100vw;
+    padding:30px 0px;
+}
+
+.enlaces-de-interes ul li i {
+    color:var(--yellow-color);
+    margin:10px 19px 10px 0px;
+    text-align: center;
+}
+
+.enlaces-de-interes ul li a {
+    color:var(--blue-color);
+}
+
+.up-btn {
+    padding:40px;
+}
+
+.up-btn a {
+    position:relative;
+    display:block;
+    width:44px;
+    height:44px;
+    border-radius: 22px;
+    background-color: var(--yellow-color);
+    color:var(--bllue-color);
+    transition: .3s ease;
+    margin-bottom: 75px;
+}
+
+.up-btn a i {
+    display:block;
+    color:var(--bllue-color);
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+}
+
+.up-btn a:hover {
+    transform: scale(1.1);
+}
