--- a/style.css
+++ b/style.css
@@ -119,13 +119,49 @@ nav #icon-bar li a i {
 
 #scroll-secuence {
     position: fixed;
-    top:350px;
+    top:300px;
     left:35px;
     width:8px;
-    height:400px;
-    background-color:var(--white-color);
+    height:50%;
+    border:1px solid white;
+    border-radius: 4px;
+    z-index:800;
+} 
+
+#scroll-secuence-inside {
+    position: relative;
+    display:block;
+    width:100%;
+    height:100%;
+    background-color:var(--blue-color);
     border-radius: 4px;
 } 
+
+/*
+#scroll-secuence-inside:before {
+    content:"";
+    display:block;
+    width:25px;
+    height:25px;
+    position:absolute;
+    border-radius: 20px;
+    top:-5px;
+    left:-12px;
+    background-color: var(--blue-color);
+} */
+
+#scroll-secuence-inside:after {
+    content:"";
+    display: block;
+    width:30px;
+    height:10px;
+    border-radius: 8px;
+    position: absolute;
+    top:98%;
+    bottom:0;
+    left:-12px;
+    background-color: var(--blue-color);
+}
 
 #hero #home img[src="img/MARIA-BRICENO-PORTRAIT-20.png"] {
     width:80%;
