--- a/style.css
+++ b/style.css
@@ -19,6 +19,18 @@ body {
     overflow-x: hidden;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
+
 header {
     max-width: 100%;
     width: 100%;
@@ -137,19 +149,6 @@ nav #icon-bar li a i {
     border-radius: 4px;
 } 
 
-/*
-#scroll-secuence-inside:before {
-    content:"";
-    display:block;
-    width:25px;
-    height:25px;
-    position:absolute;
-    border-radius: 20px;
-    top:-5px;
-    left:-12px;
-    background-color: var(--blue-color);
-} */
-
 #scroll-secuence-inside:after {
     content:"";
     display: block;
@@ -180,7 +179,7 @@ nav #icon-bar li a i {
 }
 
 #hero #home #hero-text p {
-    font-size:22px;
+    font-size:18px;
 }
 
 #hero #home #hero-text a[href="#contact"] {
@@ -244,8 +243,8 @@ nav #icon-bar li a i {
 #portfolio {
     position:relative;
     width:100%;
-    height: 100vh;
-    padding:60px 75px;
+    height: auto;
+    padding:200px 75px;
 }
 
 
@@ -271,15 +270,14 @@ nav #icon-bar li a i {
 }
 
 #portfolio-items {
-    padding: 0;
     display:flex;
-    padding:0px 150px;
+    padding:0px 100px;
 }
 
 .portfolio-item {
     position:relative;
     display:block;
-    margin:20px 20px;
+    margin:20px 10px;
     width:320px;
     height:350px;
     background-color:var(--black-color);
@@ -566,4 +564,36 @@ footer ul {
 
 .up-btn a:hover {
     transform: scale(1.1);
+}
+
+/* 
+/////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////
+
+/////////////////////////////////////////////////////////////////////
+                  JQUERY GALLERY CSS
+/////////////////////////////////////////////////////////////////////
+                                        LET'S SEE HOW IT GOES
+/////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////
+
+*/
+
+.j-galery {
+    display:block;
+    width:100%;
+    height: auto;
+    margin-top:40px;
+}
+
+.j-galery img {
+    width:100%;
+    height: auto;
+    
+}
+
+.slick-arrow {
+    display:none;
 }
