--- a/style.css
+++ b/style.css
@@ -19,17 +19,6 @@ body {
     overflow-x: hidden;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-    display: none;
-  }
-  
-  /* Hide scrollbar for IE, Edge and Firefox */
-  body {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
-
 
 header {
     max-width: 100%;
@@ -52,19 +41,19 @@ nav {
 }
 
 nav #home-nav a[href="#portfolio"],
-nav #home-nav a[href="#contact"]
+nav #home-nav a[href="#contact"],
+nav #home-nav a[href="blog.html"]
  {
     color:var(--blue-color);
     transition: .3s ease-in;
 }
 
 nav #home-nav a[href="#portfolio"]:hover,
-nav #home-nav a[href="#contact"]:hover
+nav #home-nav a[href="#contact"]:hover,
+nav #home-nav a[href="blog.html"]:hover
  {
     text-decoration: underline;
 }
-
-
 
 nav a img[alt="Maria Briceno"] {
     position: absolute;
@@ -135,9 +124,10 @@ nav #icon-bar li a i {
     left:35px;
     width:8px;
     height:50%;
-    border:1px solid white;
+    border:0px solid white;
     border-radius: 4px;
     z-index:800;
+    background-color:var(--white-color);
 } 
 
 #scroll-secuence-inside {
@@ -163,10 +153,9 @@ nav #icon-bar li a i {
 }
 
 #hero #home img[src="img/MARIA-BRICENO-PORTRAIT-20.png"] {
-    width:80%;
+    width:90%;
     height: auto;
-    padding-right:80px;
-    margin-left:175px;
+    padding-right:160px;
     margin-bottom:-16px;
 }
 
@@ -174,8 +163,28 @@ nav #icon-bar li a i {
     display:block;
     width:30%;
     height:auto;
-    margin:500px 280px 0px auto;
+    margin:300px 280px 250px auto;
     color:var(--blue-color);
+}
+
+#hero #home #hero-text :nth-child(1),
+#hero #home #hero-text :nth-child(2) {
+    font-size:50px;
+    font-weight: 900;
+    margin:-15px 0px 0px 0px;
+}
+
+#hero #home #hero-text :nth-child(2):after {
+    content: "";
+    display:block;
+    position:relative;
+    width:300px;
+    height:14px;
+    background-color:white;
+}
+
+#hero #home #hero-text :nth-child(3) {
+    margin-top:20px;
 }
 
 #hero #home #hero-text p {
@@ -186,14 +195,14 @@ nav #icon-bar li a i {
     display:flex;
     justify-content: center;
     align-items:center;
-    width:100%;
-    height:70px;
+    width:170px;
+    height:50px;
     margin:20px 0px;
     color:var(--blue-color);
-    font-size:20px;
+    font-size:18px;
     font-weight: 800;
     background-color:var(--yellow-color);
-    border:3px solid var(--blue-color);
+    border:2px solid var(--blue-color);
     border-radius:8px;
     transition: .3s ease-in-out;
 }
