--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 ul, li {
     list-style-type: none;
     list-style: none;
+    display:block;
 }
 
 header nav {
@@ -39,7 +40,7 @@ nav
 main #hero {
     margin:0px 40px;
     padding:0px 190px;
-    background-color: var(--yellow-color);
+    background-color: var(--white-color);
 }
 
 main #hero li h1 {
@@ -49,7 +50,7 @@ main #hero li h1 {
 }
 
 main #hero li h1 span {
-    background-color: var(--white-color);
+    background-color: var(--yellow-color);
 }
 
 main #hero li h3 {
@@ -73,8 +74,255 @@ main #hero li #contact-button {
     transition:.3s ease-in-out;
 }
 
+
 main #hero li #contact-button:hover {
     background-color:var(--white-color);
     color:var(--blue-color);
     text-decoration: none;
 }
+
+main #portfolio {
+    display:block;
+    position:relative;
+    padding:150px 130px;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 0;
+}
+
+main #portfolio li {
+    padding:0px;
+    margin:0px;
+}
+
+main #portfolio::before {
+    content: "";
+    display:Block;
+    width:90%;
+    height:1px;
+    background-color:#cccccc;
+    margin: 0px auto 150px auto;
+}
+
+main #portfolio .title-section {
+    display: flex;
+    position:relative;
+    justify-content: center;
+    align-items: center;
+    transition:.3s ease-in-out;
+}
+
+main #blog-section .title-section h4 {
+    font-weight: 800;
+    font-size:48px;
+    color:var(--blue-color);
+
+}
+main #blog-section .title-section {
+    display: flex;
+    position:relative;
+    justify-content: center;
+    align-items: center;
+    transition:.3s ease-in-out;
+}
+
+main #portfolio .title-section h4 {
+    font-weight: 800;
+    font-size:48px;
+    color:var(--blue-color);
+
+}
+
+main #portfolio .section-button {
+    display:block;
+    padding:10px 0px;
+    border: 3px solid #cccccc;
+    border-radius: 8px;
+    text-align:center;  
+}
+
+main #portfolio .section-button a {
+    color:#cccccc;
+    text-decoration: none;
+}
+
+main #blog-section .section-button {
+    display:block;
+    padding:10px 0px;
+    border: 3px solid #cccccc;
+    border-radius: 8px;
+    text-align:center;  
+}
+
+main #blog-section .section-button a {
+    color:#cccccc;
+    text-decoration: none;
+}
+
+main #portfolio .img-portfolio-hover {
+    box-sizing: border-box;
+    display:flex;
+    position:relative;
+    justify-content: center;
+    align-items: center;
+    cursor:pointer;
+    width:100%;
+    height:auto;
+    margin: 20px 10px 0px 10px;
+    padding:0px;
+    border-radius: 40px;
+    opacity:0.9;
+    transition:.3s ease-in-out;
+    
+}
+
+main #portfolio .img-portfolio-hover:hover {
+    opacity:1.0;
+}
+
+
+main #portfolio .img-portfolio-hover img {
+    box-sizing: border-box;
+    position:relative;
+    border-radius: 8px;
+    width:100%;
+    height:430px;
+    object-fit:none;
+    transition:.3s ease-in-out;
+    z-index:-1;
+}
+
+
+main #portfolio .portfolio-info {
+    box-sizing: border-box;
+    display:flex;
+    justify-content: space-between;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    padding: 10px 20px;
+    margin:0px;
+    background-color: var(--black-color);
+    border-radius: 0px 0px 8px 8px;
+    transition: .3s ease-in-out;
+    opacity:0;
+}
+
+main #portfolio .img-portfolio-hover:hover .portfolio-info {
+    opacity: 1.0;
+}
+
+
+main #portfolio .portfolio-info a {
+    color:var(--white-color);
+    text-decoration: none;
+}
+
+main #portfolio .porfolio-info a:hover {
+    text-decoration: underline;
+}
+
+main #portfolio .portfolio-info a i {
+    margin-right:10px;
+}
+main #visual-rest {
+    box-sizing: border-box;
+    display:block;
+    position:relative;
+    width:100%;
+    height:auto;
+    background-color: var(--white-color);
+    margin:-300px auto 0px auto;
+    padding:400px 130px 0px 130px;
+    z-index:-2;
+}
+
+main #visual-rest li div p {
+    font-size:22px;
+}
+
+main #visual-rest li div p::after {
+    content:" '' ";
+    display:block;
+    font-size:150px;
+    padding:0;
+    color: var(--blue-color);
+    text-align: right;
+    margin:-40px -30px 0px 0px;
+}
+
+main #blog-section {
+    display:block;
+    position:relative;
+    margin:0px auto 0px auto;
+    padding:300px 130px 300px 130px;
+}
+
+main #blog-section .blog-card {
+    width:100%;
+    margin:50px 20px 20px 20px;
+    background-color:var(--white-color);
+    border:none;
+    border-radius: 8px;
+    box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
+    -webkit-box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
+    -moz-box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
+}
+
+main #blog-section .blog-card:hover {
+    transform: scale(1.01);
+}
+
+main #blog-section .card-title-mod a {
+    color:var(--blue-color);
+    font-weight: 700;
+}
+
+main #blog-section .card-button {
+    display:block;
+    width:140px;
+    height:auto;
+    text-align: center;
+    font-weight: 700;
+    padding:5px 20px;
+    border:1px solid var(--blue-color);
+    border-radius: 8px;
+    color:var(--blue-color);
+    transition: .3s ease-in-out;
+}
+
+main #blog-section .card-button:hover {
+    background-color: var(--blue-color);
+    color:var(--white-color);
+}
+
+main #contact {
+    position:relative;
+    background-color:var(--yellow-color);
+    justify-content: space-between;
+    margin:0;
+}
+
+main #contact #contact-form {
+    padding:0px 150px;
+    width:50%;
+}
+
+main #contact #contact-form input,
+main #contact #contact-form textarea {
+    width:100%;
+    margin:5px 0px;
+    padding:5px 10px;
+    border:none;
+    border-radius: 4px;
+}
+
+main #contact #contact-image {
+    width:50%;
+}
+
+main #contact #contact-image img {
+    width: 100%;
+    height: auto;
+}
+
