--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ ul, li {
     list-style-type: none;
     list-style: none;
     display:block;
+    margin:0;
+    padding:0;
 }
 
 header nav {
@@ -111,6 +113,12 @@ main #portfolio .title-section {
     align-items: center;
     transition:.3s ease-in-out;
 }
+main #blog-section {
+    display:none!important;
+    position:relative;
+    margin:0px auto 0px auto;
+    padding:300px 130px 300px 130px;
+}
 
 main #blog-section .title-section h4 {
     font-weight: 800;
@@ -124,6 +132,56 @@ main #blog-section .title-section {
     justify-content: center;
     align-items: center;
     transition:.3s ease-in-out;
+}
+main #blog-section .blog-card {
+    width:100%;
+    margin:50px 20px 20px 20px;
+    background-color:var(--white-color);
+    border:none;
+    border-radius: 8px;
+    box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
+    -webkit-box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
+    -moz-box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
+}
+
+main #blog-section .blog-card:hover {
+    transform: scale(1.01);
+}
+
+main #blog-section .card-title-mod a {
+    color:var(--blue-color);
+    font-weight: 700;
+}
+
+main #blog-section .card-button {
+    display:block;
+    width:140px;
+    height:auto;
+    text-align: center;
+    font-weight: 700;
+    padding:5px 20px;
+    border:1px solid var(--blue-color);
+    border-radius: 8px;
+    color:var(--blue-color);
+    transition: .3s ease-in-out;
+}
+
+main #blog-section .card-button:hover {
+    background-color: var(--blue-color);
+    color:var(--white-color);
+}
+
+main #blog-section .section-button {
+    display:block;
+    padding:10px 0px;
+    border: 3px solid #cccccc;
+    border-radius: 8px;
+    text-align:center;  
+}
+
+main #blog-section .section-button a {
+    color:#cccccc;
+    text-decoration: none;
 }
 
 main #portfolio .title-section h4 {
@@ -146,18 +204,7 @@ main #portfolio .section-button a {
     text-decoration: none;
 }
 
-main #blog-section .section-button {
-    display:block;
-    padding:10px 0px;
-    border: 3px solid #cccccc;
-    border-radius: 8px;
-    text-align:center;  
-}
 
-main #blog-section .section-button a {
-    color:#cccccc;
-    text-decoration: none;
-}
 
 main #portfolio .img-portfolio-hover {
     box-sizing: border-box;
@@ -216,6 +263,8 @@ main #portfolio .img-portfolio-hover:hover .portfolio-info {
 main #portfolio .portfolio-info a {
     color:var(--white-color);
     text-decoration: none;
+    position:relative;
+    z-index:99;
 }
 
 main #portfolio .porfolio-info a:hover {
@@ -251,50 +300,9 @@ main #visual-rest li div p::after {
     margin:-40px -30px 0px 0px;
 }
 
-main #blog-section {
-    display:block;
-    position:relative;
-    margin:0px auto 0px auto;
-    padding:300px 130px 300px 130px;
-}
 
-main #blog-section .blog-card {
-    width:100%;
-    margin:50px 20px 20px 20px;
-    background-color:var(--white-color);
-    border:none;
-    border-radius: 8px;
-    box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
-    -webkit-box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
-    -moz-box-shadow: 1px 2px 10px -2px rgba(68,68,68,0.5);
-}
 
-main #blog-section .blog-card:hover {
-    transform: scale(1.01);
-}
 
-main #blog-section .card-title-mod a {
-    color:var(--blue-color);
-    font-weight: 700;
-}
-
-main #blog-section .card-button {
-    display:block;
-    width:140px;
-    height:auto;
-    text-align: center;
-    font-weight: 700;
-    padding:5px 20px;
-    border:1px solid var(--blue-color);
-    border-radius: 8px;
-    color:var(--blue-color);
-    transition: .3s ease-in-out;
-}
-
-main #blog-section .card-button:hover {
-    background-color: var(--blue-color);
-    color:var(--white-color);
-}
 
 main #contact {
     position:relative;
@@ -326,3 +334,97 @@ main #contact #contact-image img {
     height: auto;
 }
 
+footer {
+    display:block;
+    background-color:var(--white-color);
+}
+
+footer #footer-logo {
+    background-color:var(--white-color);
+    padding:140px 350px 30px 350px;
+}
+
+footer #footer-logo img {
+    width:500px;
+    height:auto;
+}
+
+footer #footer-social-media-icons {
+    width:100%;
+}
+
+footer #footer-logo a {
+    display: block;
+    width:30px;
+    margin:0;
+    padding:0px;
+    text-decoration: none;
+}
+
+footer #footer-logo a i {
+    display: block;
+    width:0;
+    margin:0;
+    padding:0px;
+    color:var(--blue-color);
+    font-size:25px;
+    text-align: center;
+}
+
+footer #footer-logo::after {
+    content:"";
+    display:block;
+    width:100%;
+    height:3px;
+    background-color: var(--yellow-color);
+    border-radius: 3px;
+    margin:40px auto 20px auto;
+}
+
+
+
+footer #footer-widget-bar {
+    display:block;
+    background-color:var(--white-color);
+    color:var(--black-color);
+    padding:0px 350px 30px 350px;
+}
+
+
+footer #footer-widget-bar li {
+    margin:10px 0px;
+}
+
+footer #footer-widget-bar i {
+    color:var(--yellow-color);
+    margin:0px 10px 0px 0px;
+}
+
+footer #up-button-section {
+    padding:40px 0px;
+    text-align: center;
+}
+
+footer #up-button-section a {
+    font-size:40px;
+    padding:30px;
+    color:var(--blue-color);
+    transition: .3s ease-in-out;
+}
+
+footer #up-button-section a:hover {
+    text-decoration: none;
+}
+
+footer #copyright-text {
+    display: block;
+    padding:20px 0px 5px 0px;
+    text-align:center;
+    background-color: var(--blue-color);
+}
+footer #copyright-text p {
+    color:var(--white-color);
+}
+footer #copyright-text a {
+    color:var(--white-color);
+}
