--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/*
+Theme Name: Maria Briceño
+Author: MARIA FROM RUZ ESTUDIO
+Author URI: https://www.maria-briceno.co
+Description: 
+Tags:
+version:1.0
+*/
 :root {
     --yellow-color: #DD960A;
     --blue-color: #242057;
@@ -7,6 +15,7 @@
 
 body {
     font-family: "open sans", sans-serif;
+    overflow-x: hidden;
 }
 
 ul, li {
@@ -17,12 +26,15 @@ ul, li {
     padding:0;
 }
 
+ /* HEADER ////////////////////////////////////////////////////////////*/
+
 header {
     position:relative;
     z-index:999;
 }
 header nav {
     justify-content:space-between;
+    padding:0px 10px;
 }
 
 header nav #navigation-links li a {
@@ -41,6 +53,8 @@ header nav #navigation-social-media li a {
 nav .navbar-collapse {
     flex-grow: 0;
 }
+
+ /* HERO ////////////////////////////////////////////////////////////*/
 
 main #hero {
     margin:0px 40px;
@@ -85,6 +99,9 @@ main #hero li #contact-button:hover {
     color:var(--blue-color);
     text-decoration: none;
 }
+
+ /* PORTFOLIO ////////////////////////////////////////////////////////////*/
+
 
 main #portfolio {
     display:block;
@@ -282,7 +299,7 @@ main #visual-rest {
     height:auto;
     background-color: var(--white-color);
     margin:-300px auto 0px auto;
-    padding:400px 130px 0px 130px;
+    padding:800px 130px 400px 130px;
     z-index:-2;
 }
 
@@ -307,6 +324,18 @@ main #contact {
     margin:0;
 }
 
+main #contact h5 {
+    display:block;
+    color: var(--blue-color);
+    font-size: 48px;
+    font-weight: 800;
+}
+
+main #contact p {
+    margin:30px 0px;
+}
+
+
 main #contact #contact-form {
     padding:0px 150px;
     width:50%;
@@ -330,9 +359,25 @@ main #contact #contact-image img {
     height: auto;
 }
 
+main #contact #submit-button {
+    display:block;
+    background-color: var(--blue-color);
+    border: none;
+    padding:20px 80px;
+    margin:30px 0px 0px 0px;
+    color:var(--white-color);
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 8px;
+}
+
 footer {
     display:block;
     background-color:var(--white-color);
+}
+
+footer #footer-info {
+    width: 100%;
 }
 
 footer #footer-logo {
@@ -424,12 +469,190 @@ footer #copyright-text a {
     color:var(--white-color);
 }
 
+/* MEDIA QUERIES */
+
+/* ------------------------------------------------------------------------ SMALL TABLET */
+
+@media (max-width: 768px) {
+    header nav {
+        justify-content:space-between;
+        padding:0px 40px;
+    }
+    header nav #navigation-links {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    header nav #navigation-links li a {
+        font-size: 20px;
+        margin:0px 0px;
+        text-align: right;
+        
+    }
+    header nav #navigation-social-media li a {
+        color: var(--white-color);
+        font-size:25px;
+        margin:0px 10px;
+        padding-left:20px;
+    }
+    header nav #navigation-social-media {
+        background-color: var(--blue-color);
+        display: flex;
+        flex-direction:row;
+        justify-content: space-around;
+        border-radius: 8px;
+    }
+    main #hero {
+        margin:0px 0px;
+        padding:60px 30px 40px 30px;
+    }
+    main #hero li h1 {
+        font-size:60px;
+    }
+    main #hero li #contact-button {
+        width:290px;
+        padding:20px 0px;   
+    }
+
+    /*////////////////////////////////////////////////////////*/
+
+    main #portfolio {
+        padding:150px 0px;
+        margin:0;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main #portfolio .pagination {
+        text-align:right;
+        padding:20px 0px;
+        font-size:18px;
+    }
+
+    main #portfolio #portfolio-title {
+        padding:0px 30px 30px 30px;
+    }
+
+    main #portfolio #portfolio-galery {
+        flex-direction: column;
+    }
+
+    main #portfolio .img-portfolio-hover {
+        margin:0px 0px 0px 0px;
+    }
+
+    main #portfolio .img-portfolio-hover img {
+        height: 600px;
+        border-radius: 0px;
+    }
+
+    main #portfolio .portfolio-info {
+        padding: 10px 20px;
+        border-radius: 0px 0px 0px 0px;
+        opacity:1;
+    }
+
+    main #portfolio .portfolio-info a {
+        font-size:14px;
+    }
+    
+    /*////////////////////////////////////////////////////////*/
+
+    main #visual-rest {
+        margin:-300px auto 0px auto;
+        padding:750px 30px 350px 30px;
+        z-index:-2;
+    }
+
+    main #visual-rest li div p {
+        font-size:25px;
+    }
+
+    main #visual-rest li div p::after {
+        content:" '' ";
+        display:block;
+        font-size:150px;
+        padding:0;
+        color: var(--blue-color);
+        text-align: right;
+        margin:-40px -10px 0px 0px;
+    }
+
+    /*////////////////////////////////////////////////////////*/
+
+    main #contact {
+        flex-direction: column;
+        padding:0px 0px;
+    }
+
+    main #contact #contact-form {
+        padding:160px 30px;
+        width:100%;
+    }
+
+    main #contact #contact-image {
+        display:none;
+    }
+
+    /*////////////////////////////////////////////////////////*/
+
+    footer #footer-logo {
+        padding:60px 30px 40px 30px;
+        margin:0;
+        flex-direction:column;
+        
+    }
+    
+    footer #footer-logo img {
+        width:40rem;
+        height:auto;
+        margin:0px auto 0px auto;
+    }
+    
+    footer #footer-social-media-icons a {
+        margin-top:40px;
+    }
+
+    footer #footer-logo a {
+        width:30px;
+    }
+    footer #footer-widget-bar {
+        padding:0px 40px 30px 40px;
+        flex-direction:column;
+    }
+
+    footer #footer-widget-bar h5 {
+        font-size:20px;
+    }
+
+    footer #footer-widget-bar a,
+    footer #footer-widget-bar span {
+        font-size:14px;
+    }
+    
+    footer #footer-widget-bar li {
+        margin:10px 0px;
+    }
+    
+    footer #footer-widget-bar i {
+        color:var(--yellow-color);
+        margin:0px 10px 0px 0px;
+    }
+
+    footer #copyright-text {
+        padding:20px 0px 5px 0px;
+    }
+}
+
 /* ------------------------------------------------------------------------ MOBILE DEVICE */
 
 @media (max-width: 480px) {
+    header nav #navigation-links {
+        flex-direction: column;
+    }
     header nav #navigation-links li a {
         margin:0px 10px;
         padding-left:20px;
+        font-size: 14px;
     }
     header nav #navigation-social-media li a {
         font-size:20px;
@@ -449,10 +672,6 @@ footer #copyright-text a {
         font-size:28px;
     }
     
-    main #hero li h1 span {
-        background-color: var(--yellow-color);
-    }
-    
     main #hero li h3 {
         font-size:14px;
         margin:30px 0px 0px 0px
@@ -465,6 +684,8 @@ footer #copyright-text a {
         width:300px;
         height:auto;
     }
+
+    /*////////////////////////////////////////////////////////*/
     
     main #portfolio {
         padding:150px 0px;
@@ -499,6 +720,9 @@ footer #copyright-text a {
         font-size:14px;
     }
 
+    /*////////////////////////////////////////////////////////*/
+
+
     main #visual-rest {
         box-sizing: border-box;
         display:block;
@@ -525,6 +749,9 @@ footer #copyright-text a {
         margin:-40px -10px 0px 0px;
     }
 
+     /*////////////////////////////////////////////////////////*/
+
+
     main #contact {
         flex-direction: column;
         padding:0px 0px;
@@ -538,6 +765,9 @@ footer #copyright-text a {
     main #contact #contact-image {
         display:none;
     }
+
+     /*////////////////////////////////////////////////////////*/
+
 
     footer #footer-logo {
         padding:40px 30px 40px 30px;
